--- a/06-update-component/Makefile
+++ b/06-update-component/Makefile
@@ -1,4 +1,4 @@
-VERSION=v1.0.0
+VERSION=v1.1.0
 COMPONENT_NAME=ocm.software/demos/podinfo:${VERSION}
 OUTPUT_DIR=.out
 KEYNAME=gitopscon
@@ -14,13 +14,9 @@ clean:
 build: clean
 	@ocm add componentversions --create --file ${OUTPUT_DIR} --version ${VERSION} --scheme v3alpha1 componentfile.yaml
 
-.PHONY: generate-keys
-generate-keys:
-	@ocm create rsakeypair ${KEYNAME}.key
-
 .PHONY: sign
 sign:
-	@ocm sign component --signature ${KEYNAME} --private-key ${KEYNAME}.key ${OUTPUT_DIR}
+	@ocm sign component --signature ${KEYNAME} --private-key ../00-create-component/${KEYNAME}.key ${OUTPUT_DIR}
 
 .PHONY: push
 push:
@@ -28,4 +24,4 @@ push:
 
 .PHONY: verify
 verify:
-	@ocm verify component --signature ${KEYNAME} --public-key ${KEYNAME}.key.pub ${TARGET_REGISTRY}//${COMPONENT_NAME}
+	@ocm verify component --signature ${KEYNAME} --public-key ../00-create-component/${KEYNAME}.key.pub ${TARGET_REGISTRY}//${COMPONENT_NAME}
