use static podinfo image
Signed-off-by: Piaras Hoban <phoban01@gmail.com>

--- a/00-create-component/componentfile.yaml
+++ b/00-create-component/componentfile.yaml
@@ -20,10 +20,4 @@ resources:
   type: ociImage
   access:
     type: ociRegistry
-    imageReference: ghcr.io/stefanprodan/podinfo:6.3.0
-- name: podinfo-manifests
-  version: 6.3.0
-  type: Directory
-  access:
-    type: ociRegistry
-    imageReference: ghcr.io/stefanprodan/manifests/podinfo:6.3.0
+    imageReference: ghcr.io/phoban01/podinfo:6.3.6-static
