--- a/00-setup-demo/manifests/ocm.yaml
+++ b/00-setup-demo/manifests/ocm.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    app.kubernetes.io/instance: ocm-system
-    app.kubernetes.io/part-of: ocm
-    control-plane: controller
-    pod-security.kubernetes.io/warn: restricted
-    pod-security.kubernetes.io/warn-version: latest
-  name: ocm-system
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -2398,6 +2387,9 @@ spec:
           capabilities:
             drop:
             - ALL
+        volumeMounts:
+        - name: certs
+          mountPath: /etc/ssl/certs
       initContainers:
       - image: ghcr.io/open-component-model/ocm-registry
         imagePullPolicy: IfNotPresent
@@ -2408,3 +2400,7 @@ spec:
           type: RuntimeDefault
       serviceAccountName: ocm-controller
       terminationGracePeriodSeconds: 10
+      volumes:
+      - name: certs
+        secret:
+          secretName: mkcert-tls
