update secret handling
Signed-off-by: Piaras Hoban <phoban01@gmail.com>

--- a/00-setup-demo/manifests/ingress.yaml
+++ b/00-setup-demo/manifests/ingress.yaml
@@ -321,6 +321,7 @@ subjects:
 apiVersion: v1
 data:
   allow-snippet-annotations: "true"
+  proxy-body-size: "0"
 kind: ConfigMap
 metadata:
   labels:
