add containerd config and webhook setup
Signed-off-by: Piaras Hoban <phoban01@gmail.com>

--- a/00-setup-demo/gitea/values.yaml
+++ b/00-setup-demo/gitea/values.yaml
@@ -8,6 +8,8 @@ gitea:
       DB_TYPE: sqlite3
     ui:
       DEFAULT_THEME: arc-green
+    webhook:
+      ALLOWED_HOST_LIST: webhook-receiver.flux-system
   admin:
     username: ocm-admin
     password: password
