--- a/00-setup-demo/kind/config.yaml
+++ b/00-setup-demo/kind/config.yaml
@@ -1,13 +1,11 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+containerdConfigPatches:
+  - |-
+    [plugins."io.containerd.grpc.v1.cri".registry]
+      config_path = "/etc/containerd/certs.d"
 nodes:
 - role: control-plane
-  kubeadmConfigPatches:
-  - |
-    kind: InitConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-labels: "ingress-ready=true"
   extraPortMappings:
   - containerPort: 80
     hostPort: 80
@@ -15,3 +13,14 @@ nodes:
   - containerPort: 443
     hostPort: 443
     protocol: TCP
+  extraMounts:
+  - containerPath: /etc/containerd/certs.d/gitea.ocm.dev
+    hostPath: ./kind/certs.d/gitea.ocm.dev
+  - containerPath: /etc/hosts
+    hostPath: ./kind/hostfile
+  kubeadmConfigPatches:
+  - |
+    kind: InitConfiguration
+    nodeRegistration:
+      kubeletExtraArgs:
+        node-labels: "ingress-ready=true"
