add pr setup and update component workflow
Signed-off-by: Piaras Hoban <phoban01@gmail.com>

--- a/00-setup-demo/flux-repo-src/main-branch/subscriptions/podinfo.yaml
+++ b/00-setup-demo/flux-repo-src/main-branch/subscriptions/podinfo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podinfo-subscription
   namespace: ocm-system
 spec:
-  interval: 10m0s
+  interval: 30s
   component: ocm.software/demos/podinfo
   semver: ">=v1.0.0"
   source:
