--- a/02-update-component/src/config.yaml
+++ b/02-update-component/src/config.yaml
@@ -6,15 +6,29 @@ metadata:
     env: test
 configuration:
   defaults:
+    color: "#34577c"
     message: "This is the backend service"
     replicas: 1
+    serviceAccountName: "default"
   rules:
   - value: (( message ))
     file: configmap.yaml
     path: data.PODINFO_UI_MESSAGE
+  - value: (( color ))
+    file: configmap.yaml
+    path: data.PODINFO_UI_COLOR
   - value: (( replicas ))
-    file: deployment.yaml
+    file: backend.yaml
     path: spec.replicas
+  - value: (( serviceAccountName ))
+    file: backend.yaml
+    path: spec.template.spec.serviceAccountName
+  - value: (( base64(message) ))
+    file: backend.yaml
+    path: spec.template.metadata.annotations.roll
+  - value: (( base64(join( " ", message,color)) ))
+    file: backend.yaml
+    path: spec.template.metadata.annotations.roll
   schema:
     type: object
     additionalProperties: false
@@ -23,8 +37,12 @@ configuration:
         type: string
       message:
         type: string
+      serviceAccountName:
+        type: string
+      color:
+        type: string
 localization:
 - resource:
     name: podinfo
-  file: deployment.yaml
+  file: backend.yaml
   image: spec.template.spec.containers[0].image
