--- a/02-update-component/Makefile
+++ b/02-update-component/Makefile
@@ -1,8 +1,8 @@
 VERSION=v1.1.0
 COMPONENT_NAME=ocm.software/demos/podinfo:${VERSION}
 OUTPUT_DIR=.out
-KEYNAME=gitopscon
-TARGET_REGISTRY=ghcr.io/phoban01
+KEYNAME=ocm-signing
+TARGET_REGISTRY=gitea.ocm.dev/public-org
 
 .PHONY: clean
 clean:
@@ -14,9 +14,13 @@ clean:
 build: clean
 	@ocm add componentversions --create --file ${OUTPUT_DIR} --version ${VERSION} --scheme v3alpha1 componentfile.yaml
 
+.PHONY: generate-keys
+generate-keys:
+	@ocm create rsakeypair ${KEYNAME}.key
+
 .PHONY: sign
 sign:
-	@ocm sign component --signature ${KEYNAME} --private-key ../00-create-component/${KEYNAME}.key ${OUTPUT_DIR}
+	@ocm sign component --signature ${KEYNAME} --private-key ../00-setup-demo/pki/${KEYNAME}.rsa.key ${OUTPUT_DIR}
 
 .PHONY: push
 push:
@@ -24,4 +28,9 @@ push:
 
 .PHONY: verify
 verify:
-	@ocm verify component --signature ${KEYNAME} --public-key ../00-create-component/${KEYNAME}.key.pub ${TARGET_REGISTRY}//${COMPONENT_NAME}
+	@ocm verify component --signature ${KEYNAME} --public-key ../00-setup-demo/pki/${KEYNAME}.rsa.pub ${TARGET_REGISTRY}//${COMPONENT_NAME}
+
+.PHONY: run
+run:
+	./script.sh
+
