add static flux assets
Signed-off-by: Piaras Hoban <phoban01@gmail.com>

--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/component_version.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/component_version.yaml
@@ -1,11 +1,11 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: ComponentVersion
 metadata:
-  name: podinfo
+  name: weave-gitops
   namespace: ocm-system
 spec:
   interval: 1m0s
-  component: ocm.software/demos/podinfo
+  component: ocm.software/demos/weave-gitops
   repository:
     url: gitea.ocm.dev/private-org
   version:
