--- a/00-setup-demo/flux-repo-src/pr-branch/values.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/values.yaml
@@ -1,5 +1,2 @@
-podinfo:
-  message: "Hello from ocm-controller"
-  replicas: 2
+weave-gitops:
   serviceAccountName: ocm-dev-ops
-  color: "#33B6FF"
