--- a/01-create-component/Makefile
+++ b/01-create-component/Makefile
@@ -1,5 +1,5 @@
 VERSION=v1.0.0
-COMPONENT_NAME=ocm.software/demos/podinfo:${VERSION}
+COMPONENT_NAME=ocm.software/demos/weave-gitops:${VERSION}
 OUTPUT_DIR=.out
 KEYNAME=ocm-signing
 TARGET_REGISTRY=gitea.ocm.dev/public-org
