--- a/00-setup-demo/flux-repo/components/podinfo/localize.yaml
+++ b/00-setup-demo/flux-repo/components/podinfo/localize.yaml
@@ -1,19 +1,19 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: Localization
 metadata:
-  name: podinfo-deployment
+  name: weave-gitops
   namespace: ocm-system
 spec:
   interval: 1m
   sourceRef:
     kind: ComponentVersion
-    name: podinfo
+    name: weave-gitops
     resourceRef:
-      name: kubernetes-manifests
+      name: manifests
       version: latest
   configRef:
     kind: ComponentVersion
-    name: podinfo
+    name: weave-gitops
     resourceRef:
       name: config
       version: latest
