--- a/01-create-component/src/config.yaml
+++ b/01-create-component/src/config.yaml
@@ -2,47 +2,59 @@ apiVersion: config.ocm.software/v1alpha1
 kind: ConfigData
 metadata:
   name: ocm-config
-  labels:
-    env: test
 configuration:
   defaults:
-    color: "#34577c"
-    message: "This is the backend service"
-    replicas: 1
-    serviceAccountName: "default"
+    serviceAccountName: ocm-dev-ops
   rules:
-  - value: (( message ))
-    file: configmap.yaml
-    path: data.PODINFO_UI_MESSAGE
-  - value: (( color ))
-    file: configmap.yaml
-    path: data.PODINFO_UI_COLOR
-  - value: (( replicas ))
-    file: deployment.yaml
-    path: spec.replicas
   - value: (( serviceAccountName ))
-    file: deployment.yaml
-    path: spec.template.spec.serviceAccountName
-  - value: (( base64(message) ))
-    file: deployment.yaml
-    path: spec.template.metadata.annotations.roll
-  - value: (( base64(join( " ", message,color)) ))
-    file: deployment.yaml
-    path: spec.template.metadata.annotations.roll
+    file: helm_release.yaml
+    path: spec.values.serviceAccount.name
   schema:
     type: object
     additionalProperties: false
     properties:
-      replicas:
-        type: string
-      message:
-        type: string
       serviceAccountName:
         type: string
-      color:
-        type: string
 localization:
-- resource:
-    name: podinfo
-  file: deployment.yaml
-  image: spec.template.spec.containers[0].image
+- file: helm_release.yaml
+  tag: spec.values.image.tag
+  resource:
+    name: image
+- file: helm_repository.yaml
+  mapping:
+    path: spec.url
+    transform: |-
+          package main
+
+          import (
+            "encoding/json"
+            "path"
+          )
+
+          result: string
+
+          for x in component.resources {
+            if x.name == "chart" {
+              result: path.Dir(x.access.imageReference)
+            }
+          }
+          out: json.Marshal("oci://"+result)
+- file: helm_release.yaml
+  mapping:
+    path: spec.values.image.repository
+    transform: |-
+          package main
+
+          import (
+            "encoding/json"
+            "strings"
+          )
+
+          result: string
+
+          for x in component.resources {
+            if x.name == "image" {
+              result: strings.Split(x.access.imageReference,":")[0]
+            }
+          }
+          out: json.Marshal(result)
