--- a/01-create-component/Makefile
+++ b/01-create-component/Makefile
@@ -20,7 +20,7 @@ generate-keys:
 
 .PHONY: sign
 sign:
-	@ocm sign component --signature ${KEYNAME} --private-key ../00-setup-demo/pki/${KEYNAME}.rsa.key ${OUTPUT_DIR}
+	@ocm sign component --lookup gitea.ocm.dev/public-org --signature ${KEYNAME} --private-key ../00-setup-demo/signing-keys/${KEYNAME}.rsa.key ${OUTPUT_DIR}
 
 .PHONY: push
 push:
@@ -28,7 +28,7 @@ push:
 
 .PHONY: verify
 verify:
-	@ocm verify component --signature ${KEYNAME} --public-key ../00-setup-demo/pki/${KEYNAME}.rsa.pub ${TARGET_REGISTRY}//${COMPONENT_NAME}
+	@ocm verify component --signature ${KEYNAME} --public-key ../00-setup-demo/signing-keys/${KEYNAME}.rsa.pub ${TARGET_REGISTRY}//${COMPONENT_NAME}
 
 .PHONY: run
 run:
