--- a/01-create-component/src/config.yaml
+++ b/01-create-component/src/config.yaml
@@ -4,15 +4,27 @@ metadata:
   name: ocm-config
 configuration:
   defaults:
-    serviceAccountName: ocm-dev-ops
+    replicas: 1
+    message: "podinfo component :: version 6.3.6"
+    serviceAccountName: default
   rules:
-  - value: (( serviceAccountName ))
+  - value: (( replicas ))
+    file: helm_release.yaml
+    path: spec.values.replicaCount
+  - value: (( message ))
+    file: helm_release.yaml
+    path: spec.values.ui.message
+  - value: (( replicaCount ))
     file: helm_release.yaml
     path: spec.values.serviceAccount.name
   schema:
     type: object
     additionalProperties: false
     properties:
+      replicas:
+        type: string
+      message:
+        type: string
       serviceAccountName:
         type: string
 localization:
@@ -24,15 +36,11 @@ localization:
   mapping:
     path: spec.url
     transform: |-
-          package main
-
           import (
             "encoding/json"
             "path"
           )
-
           result: string
-
           for x in component.resources {
             if x.name == "chart" {
               result: path.Dir(x.access.imageReference)
@@ -43,15 +51,11 @@ localization:
   mapping:
     path: spec.values.image.repository
     transform: |-
-          package main
-
           import (
             "encoding/json"
             "strings"
           )
-
           result: string
-
           for x in component.resources {
             if x.name == "image" {
               result: strings.Split(x.access.imageReference,":")[0]
