--- a/00-setup-demo/flux-repo-src/pr-branch/values.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/values.yaml
@@ -1,2 +1,4 @@
-weave-gitops:
-  serviceAccountName: ocm-dev-ops
+podinfo:
+  replicas: 1
+  message: "podinfo component :: version 6.3.6"
+  serviceAccountName: ocm-ops
