--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/localize.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/localize.yaml
@@ -1,19 +1,19 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: Localization
 metadata:
-  name: weave-gitops
+  name: podinfo
   namespace: ocm-system
 spec:
   interval: 1m
   sourceRef:
     kind: ComponentVersion
-    name: weave-gitops
+    name: podinfo
     resourceRef:
       name: manifests
       version: latest
   configRef:
     kind: ComponentVersion
-    name: weave-gitops
+    name: podinfo
     resourceRef:
       name: config
       version: latest
