--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/service_account.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/service_account.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ocm-dev-ops
+  name: ocm-ops
   namespace: default
 imagePullSecrets:
 - name: gitea-registry-credentials
