--- a/00-setup-demo/flux-repo-src/pr-branch/components/weave-gitops/deploy.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/weave-gitops/deploy.yaml
@@ -1,12 +1,12 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: FluxDeployer
 metadata:
-  name: podinfo
+  name: weave-gitops
   namespace: ocm-system
 spec:
   sourceRef:
     kind: Configuration
-    name: podinfo
+    name: weave-gitops
   kustomizationTemplate:
     interval: 1m0s
     path: ./
