--- a/00-setup-demo/flux-repo-src/main-branch/clusters/kind/components_kustomization.yaml
+++ b/00-setup-demo/flux-repo-src/main-branch/clusters/kind/components_kustomization.yaml
@@ -2,12 +2,32 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: components
+  name: podinfo-component
   namespace: flux-system
 spec:
   interval: 1m0s
-  path: ./components
+  path: ./components/podinfo
+  prune: true
+  dependsOn:
+  - name: weave-gitops-component
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: weave-gitops-component
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  path: ./components/weave-gitops
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  # healthChecks:
+  #   - apiVersion: apps/v1
+  #     kind: Deployment
+  #     name: weave-gitops
+  #     namespace: default
