--- a/01-create-component/src/config.yaml
+++ b/01-create-component/src/config.yaml
@@ -4,8 +4,16 @@ metadata:
   name: ocm-config
 configuration:
   defaults:
-    serviceAccountName: ocm-dev-ops
+    replicas: 1
+    message: "podinfo component :: version 6.3.6"
+    serviceAccountName: default
   rules:
+  - value: (( replicas ))
+    file: helm_release.yaml
+    path: spec.values.replicaCount
+  - value: (( message ))
+    file: helm_release.yaml
+    path: spec.values.ui.message
   - value: (( serviceAccountName ))
     file: helm_release.yaml
     path: spec.values.serviceAccount.name
@@ -13,13 +21,22 @@ configuration:
     type: object
     additionalProperties: false
     properties:
+      replicas:
+        type: string
+      message:
+        type: string
       serviceAccountName:
         type: string
 localization:
 - file: helm_release.yaml
+  repository: spec.values.image.repository
   tag: spec.values.image.tag
   resource:
     name: image
+- file: helm_release.yaml
+  tag: spec.chart.spec.version
+  resource:
+    name: chart
 - file: helm_repository.yaml
   mapping:
     path: spec.url
@@ -38,6 +55,7 @@ localization:
               result: path.Dir(x.access.imageReference)
             }
           }
+
           out: json.Marshal("oci://"+result)
 - file: helm_release.yaml
   mapping:
@@ -49,7 +67,6 @@ localization:
             "encoding/json"
             "strings"
           )
-
           result: string
 
           for x in component.resources {
@@ -57,4 +74,5 @@ localization:
               result: strings.Split(x.access.imageReference,":")[0]
             }
           }
+
           out: json.Marshal(result)
