--- a/01-create-component/src/helm/helm_release.yaml
+++ b/01-create-component/src/helm/helm_release.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: podinfo
-      version: "4.0.22"
+      version: 6.3.6
       sourceRef:
         kind: HelmRepository
         name: podinfo
@@ -18,10 +18,9 @@ spec:
       message: ""
     image:
       repository: ghcr.io/stefanprodan/podinfo
+      tag: 6.3.6
     serviceAccount:
       name: default
-    serviceMonitor:
-      enabled: true
     ingress:
       enabled: true
       hosts:
