--- a/00-setup-demo/flux-repo-src/pr-branch/values.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/values.yaml
@@ -2,3 +2,5 @@ podinfo:
   replicas: 1
   message: "podinfo component :: version 6.3.6"
   serviceAccountName: ocm-ops
+weave-gitops:
+  serviceAccountName: ocm-ops
