--- a/02-update-component/componentfile.yaml
+++ b/02-update-component/componentfile.yaml
@@ -2,17 +2,22 @@ name: ocm.software/demos/podinfo
 provider:
   name: ocm.software
 resources:
-- name: podinfo
-  version: 6.3.7
+- name: image
   type: ociImage
-  access:
-    type: ociRegistry
-    imageReference: ghcr.io/phoban01/podinfo:6.3.7-static
-- name: kubernetes-manifests
+  input:
+    type: docker
+    path: ghcr.io/phoban01/podinfo:6.3.6-static
+- name: chart
+  type: ociImage
+  input:
+    type: helm
+    version: 6.3.6
+    path: podinfo-6.3.6.tgz
+- name: manifests
   type: Directory
   input:
     type: dir
-    path: src/k8s
+    path: src/helm
     compress: true
 - name: config
   type: PlainText
@@ -20,3 +25,7 @@ resources:
     type: file
     path: src/config.yaml
     compress: true
+componentReferences:
+- name: weave-gitops
+  componentName: ocm.software/demos/weave-gitops
+  version: v1.0.0
