--- a/00-setup-demo/flux-repo-src/main-branch/clusters/kind/flux-system/gotk-sync.yaml
+++ b/00-setup-demo/flux-repo-src/main-branch/clusters/kind/flux-system/gotk-sync.yaml
@@ -17,7 +17,7 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 30s
   path: ./clusters/kind
   prune: true
   sourceRef:
