--- a/00-setup-demo/flux-repo-src/main-branch/clusters/kind/subscriptions_kustomization.yaml
+++ b/00-setup-demo/flux-repo-src/main-branch/clusters/kind/subscriptions_kustomization.yaml
@@ -4,7 +4,7 @@ metadata:
   name: subscriptions
   namespace: flux-system
 spec:
-  interval: 1m0s
+  interval: 30s
   path: ./subscriptions
   prune: true
   sourceRef:
