--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/deploy.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/deploy.yaml
@@ -8,7 +8,7 @@ spec:
     kind: Configuration
     name: podinfo
   kustomizationTemplate:
-    interval: 1m0s
+    interval: 30s
     path: ./
     prune: true
     targetNamespace: default
