--- a/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/localize.yaml
+++ b/00-setup-demo/flux-repo-src/pr-branch/components/podinfo/localize.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podinfo
   namespace: ocm-system
 spec:
-  interval: 1m
+  interval: 30s
   sourceRef:
     kind: ComponentVersion
     name: podinfo
