add certificate to build process

--- a/00-setup-demo/tekton/publish_component_pipeline.yaml
+++ b/00-setup-demo/tekton/publish_component_pipeline.yaml
@@ -99,6 +99,9 @@ spec:
       - --scheme
       - v3alpha1
       - componentfile.yaml
+    volumeMounts:
+    - name: certs
+      mountPath: /etc/ssl/certs
   - name: sign
     image: ghcr.io/open-component-model/ocm/ocm.software/ocmcli/ocmcli-image:latest
     workingDir: "$(workspaces.source.path)"
